make JDK11 compatible & AWS SAA Course:Background Overview